# smsgate

./: .coveragerc  .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  loader.py  main.py  makefile  process_cached.py  pyproject.toml  pytest.ini  read_xml.py  receiver.py  requirements.txt  save_to_pocketbase.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 007078d0ce44_rename_field.py  80b70406bdea_sms_data_table_update.py  ab372595639c_sms_data_table.py  dcbadcb88d59_rename_field.py  f1a93be77048_sms_data_table_update.py  f1ebe9c5dea6_rename_field.py
libs/: config.py  decimal_utils.py  gemini_parser.py  llm_core.py  models.py  nats_utils.py  pocketbase.py  regexes.py  sentry.py
services/api_gateway/: Dockerfile  main.py  schemas.py
services/dashboard/: Dockerfile  main.py
services/mcp_server/: server.py
services/parser_worker/: Dockerfile  dlq_worker.py  metrics.py  worker.py
services/pb_writer/: Dockerfile  pb_schema.json  pocketbase.py  upsert.py  writer.py
services/xml_watcher/: Dockerfile  watcher.py
tests/: test_nats_utils.py  test_parsers.py
tests/api_gateway/: test_main.py
