[project]
name = "smsgate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "anyio>=4.9.0",
    "async-lru>=2.0.5",
    "asyncpg>=0.30.0",
    "diskcache>=5.6.3",
    "fastapi>=0.115.12",
    "google-genai>=1.20.0",
    "httpx>=0.28.1",
    "mcp>=1.9.4",
    "msgpack>=1.1.1",
    "nats-py>=2.10.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pocketbase>=0.15.0",
    "pocketbase-client>=0.2.3",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-tornasync>=0.6.0.post2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sentry-sdk>=2.30.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.34.3",
    "watchdog>=6.0.0",
]
